improvement: improved homepage with search and file-explorer (#1759)
* feat: improved homepage with search and file-explorer

* add refresh
